src/client/App.css
/* ... */
.form-input::placeholder, .reg-form-input::placeholder {
  color:#cad1ce;
}

.badlogin {
  color: lightcoral;
  margin-top: 15px;
  font-size: 14pt;
  text-align: center;
}

.h6 {
  display: block;
  flex-direction: row;
}

a {
  text-decoration: none;
}

a:hover {
  scale: 1.01;
  cursor: pointer;
  z-index: 6;
}

a:active {
  scale: 1;
}

li:hover {
  margin-bottom: -1px;
  border-bottom: 1px solid black;
  /* scale: 1; */
}

.testimonial {
  min-height: 79vh;
  display: flex;
  width: 100vw;
  background-color:#364a60;
  padding-top: 50px;
  padding-bottom: 50px;
}

.testimonial2 {
  background-color: #cad1ce;
}

.heart-puzzle {
  max-width: 40%;
}

.img_textHolder {
  display: flex;
  width: 100vw;
  padding: 30px;
  justify-content: space-evenly;
  align-items: center;
}

.text-box {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  color: #cad1ce;
  margin-top: 0px;
  width: 37%;
}

.text {
  color:#cad1ce;
  margin-top: 5px;
}

.two {
  color:#1e2b3a
}

.accountPage {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  background-color: black;
}

.accountPageText {
  color:#c3965f;
  font-size: 36pt;
  margin-top: -200px;
}

.adminPage {
  display: flex;
  flex-direction: column;
  align-items: center;
  min-height: 83vh;
  background-color: #364a60;
}

.Centered {
  width: 100vw;
  display: flex;
  justify-content: center;
}

.margin-top {
  margin-top: 20px;
}

.editValuesForm {
  display: flex;
  flex-direction: column;
  margin-bottom: 5vhd;
  gap: 2vh;
  min-height: 40vh;
  width: 100vw;
  align-items: center;
}

.editInput {
  height: 25px;
  /* background-color: #818181; */
  width: 40%;
}

.userCard {
  width: 45vw;
  min-height: 150px;
  border: 1px solid grey;
  margin: 10px;
  border-radius: 10px;
  padding: 10px;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 5px;
  background-color: #cad1ce;
}

.billing {
  min-height: 68vh;
  background-color:#364a60;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;

}

.billscontainer {
  width: 100%;
  min-height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
}

.billdiv {
  height: 50px;
  background-color: #f2ebe0;
  width: 300px;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  border-radius: 25px;
  margin: 10px;
}

.backbtn .billdetail {
  padding-left: 10px;
  margin-top: 20px;  
  padding-bottom: 20px;
  background-color: #364a60;
}

.backbtn {
  position: absolute;
  color:#c3965f;
  font-size: 14pt;
}

.topBack {
  top: 10vh;
  left: 10px;
  z-index: 3;
}

.lowerTopBack {
  top: 24vh;
}

.bottomBack {
  position: relative;
  left: 10px;
  bottom: 5vh;
}

.billdetail {
  min-height: 72vh;
  background-color: #364a60;
  overflow-x: hidden;
  -ms-overflow-style: none;  /* IE and Edge */
  scrollbar-width: none;  /* Firefox */
}

*::-webkit-scrollbar {
  display: none; /* Chrome, Safari, Opera */
}

.billdetail_admin {
  min-height: 83vh;
}

.billdetail_blur {
  filter: blur(4px);
}

.table {
  width: 100vw;
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: auto;
  padding-bottom: 50px;
}

table {
  background-color: #cad1ce;
  padding: 100px;
  border-radius: 3px;
}

.bills_detail_table, .bills_detail, .bills_detail_head, .bills_detail_foot, .bills_detail_foottwo {
  border: 1px solid #364a60;
  padding: 10px;
}

.bills_detail_head {
  border-bottom: 3px solid #364a60;
  font-weight: bolder;
  width: auto;
}

.bills_detail {
  width: auto;
  height: 20px;
}

.bills_detail_foot {
  border: 3px double #364a60;
  font-weight: bolder;
}

.bills_detail_foottwo {
  border: 4px double #364a60;
  font-weight: bolder;
}

.add_charge {
  display: flex;
  justify-content: center;
  margin-top: -50px;
  padding-bottom: 50px;
}

.modalDiv {
  width: 100vw;
  height: 100vh;
  background-color: rgba(0, 0, 0, .8);
  z-index: 5;
  position: fixed;
  top: 0px;
  left: 0px;
  overflow-x: hidden;
  display: flex;
  justify-content: center;
  align-items: flex-start;
}

.add_charge_form {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 10%;
  min-width: 28vw;
  min-height: 40vh;
  border-radius: 10px;
  background-color:#364a60;
  margin-top: 22vh;
  position: fixed;
  z-index: 10;
  margin-left: 36vw;
  margin-right: auto;
  bottom: 40vh;
}

.modalContainer {
  width: 100vw;
  height: 100vh;
  position: fixed;
  left: 0px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.amount {
  width: 150px;
}

.paid {
  background-color: aquamarine;
}

.unpaid {
  background-color: salmon;
}

.checkbox {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  width: 75px;
  height: 100%;
}

.paid_save_btn {
  padding: 3px;
  background-color: #364a60;
  border-radius: 5px;
  color:#f2ebe0;
}

.clientProfilePage {
  min-height: 83vh;
  background-color: #364a60;
  color:#c3965f;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.clientProfileSection {
  margin-bottom: 0px;
}

.clientinfo {
  text-align: center;
  width: 100vw;
}

.clientinfolink {
  color:#c3965f;
}

.closeModal {
  position: fixed;
  top: 9vh;
  right: 17px;
  color:#cad1ce;
  font-weight: bold;
  font-size: 17pt;
  z-index: 10;
}

.footer {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  min-height: 11vh;
  background-color: #1e2b3a;
  @media (max-width: 550px){
    gap: 5vw;
    justify-content: center;
  }
}

.footerIcons {
  display: flex;
  flex-wrap: nowrap;
  min-width: 100px;
  min-height: 45px;
  justify-content: space-around;
  align-items: center;
  @media (max-width: 350px){
    min-width: 35vw;
  }
}
/* ... */

